[tool.poetry]
name = "kcare-qualys"
version = "0.1.6"
description = "The script marks vulnerabilities detected by Qualys, but patched by KernelCare as exceptions"
authors = ["Rinat Sabitov <rsabitov@cloudlinux.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudlinux/kcare-qualys"
keywords = ["kernelcare", "qualys"]

[tool.poetry.dependencies]
python = "^3.7 || ^2.7"
qualysapi = "^5.1"
configparser = "^3.7"

[tool.poetry.dev-dependencies]
mock = "^3.0"
pytest-cov = "^2.7"
pytest = "^4.5"
flake8 = "^3.7"
responses = "^0.10.6"

[tool.poetry.scripts]
kcare-qualys = 'kcare_qualys:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

